# PhyAVBench

./: .gitignore  LICENSE  README.md  env.d.ts  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: deploy-pages.yml
assets/: index-B5IrOYyM.css  index-BgqZIZoN.js  index-BjKyLwMD.js  index-Bq4rNFhz.css  index-DwPbycon.css  index-gVBSoQK7.js
embeddings/gt_a2b/clap/: m01_c01_t01_s02_g001.npy  m01_c01_t01_s02_g002.npy  m01_c01_t01_s02_g004.npy  m01_c01_t01_s02_g005.npy  m01_c01_t01_s02_g007.npy  m01_c01_t01_s02_g009.npy  m01_c01_t01_s02_g011.npy  m01_c01_t01_s02_g012.npy  m01_c01_t01_s02_g014.npy  m01_c01_t01_s02_g016.npy  m01_c01_t01_s02_g018.npy  m01_c01_t01_s02_g020.npy  m01_c01_t01_s02_g021.npy  m01_c01_t01_s02_g031.npy  m01_c01_t01_s02_g032.npy  m01_c01_t01_s02_g033.npy  m01_c01_t01_s02_g035.npy  m01_c01_t01_s02_g036.npy  m01_c01_t01_s02_g037.npy  m01_c01_t01_s02_g038.npy  m01_c01_t01_s02_g039.npy  m01_c01_t01_s02_g040.npy  (+315 more)
public/videos480p/: 10_groups.jsonl
scripts/: test_multiple_models.sh  test_single_model.sh
src/: App.vue  main.ts
src/assets/: base.css  main.css
src/components/: AudioPhysicsSensitivityTest.vue  ComparisonWithExistingBenchmarks.vue  DataCurationPipeline.vue  Performance.vue  ProjectHeader.vue  SampleVideoPairsInPhyAVBench.vue  VideoTable.vue
src/directives/: mathjax.ts
src/phyavbench/: __init__.py  cli.py
tests/: test_cli_interface.py  test_cprs_scoring.py  test_load_prompt_all.py  test_pipeline_extract_audio.py  test_pipeline_extract_clap.py  test_pipeline_extract_imagebind.py
(+341 files in other folders)
